@@ -1,25 +1,30 @@
 package com.spring.nbcijo.service;
 
+import com.spring.nbcijo.dto.request.CommentListRequestDto;
 import com.spring.nbcijo.dto.request.CommentRequestDto;
+import com.spring.nbcijo.dto.response.CommentListResponseDto;
 import com.spring.nbcijo.dto.response.CommentResponseDto;
 import com.spring.nbcijo.entity.Comment;
 import com.spring.nbcijo.entity.Post;
 import com.spring.nbcijo.entity.User;
 import com.spring.nbcijo.global.enumeration.ErrorCode;
 import com.spring.nbcijo.global.exception.InvalidInputException;
+import com.spring.nbcijo.global.util.PagingUtil;
 import com.spring.nbcijo.repository.CommentRepository;
 import com.spring.nbcijo.repository.PostRepository;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Transactional
-public class CommentServiceImpl implements CommentService{
+public class CommentServiceImpl implements CommentService {
 
     private final CommentRepository commentRepository;
     private final PostRepository postRepository;
@@ -37,12 +42,20 @@ public class CommentServiceImpl implements CommentService{
     }
 
     @Override
-    public List<CommentResponseDto> getComments(Long postId) {
+    public CommentListResponseDto getComments(Long postId, CommentListRequestDto commentListRequestDto) {
         findPost(postId);
-        List<Comment> comments = commentRepository.findAllByPostIdOrderByCreatedAtDesc(postId);
-        return comments.stream()
-                .map(CommentResponseDto::new)
-                .toList();
+        if (commentListRequestDto.getColumn() == null) {
+            commentListRequestDto.setColumn("createdDate");
+        }
+
+        PageRequest pageRequest = PageRequest.of(commentListRequestDto.getPage(),
+                commentListRequestDto.getPageSize(), commentListRequestDto.getSortDirection(),
+                commentListRequestDto.getColumn());
+        Page<CommentResponseDto> comments = commentRepository.findAllComment(postId, commentListRequestDto, pageRequest);
+        return CommentListResponseDto.builder().pagingUtil(
+                new PagingUtil(comments.getTotalElements(), comments.getTotalPages(),
+                        comments.getNumber(), comments.getSize())).commentList(comments.stream().collect(
+                Collectors.toList())).build();
     }
 
     @Override
